# FlaskPocketBase

./: .replit  LICENSE  README.md  main.py  pyproject.toml  replit.nix
app/: app_factory.py
app/brokers/models/jsonschema/: convert_excel_to_json_schema.py
app/brokers/storage/: i_storage_broker.py  list_folders.py
app/brokers/storage/file/: json_storage_broker.py
app/brokers/storage/pandas/: csv_storage_broker.py  excel_storage_broker.py  hdf_storage_broker.py  json_storage_broker.py  parquet_storage_broker.py  pickle_storage_broker.py  sql_alchemy_storage_broker.py
app/brokers/storage/sql_alchemy/: sql_alchemy_storage_broker.py
app/core/: api_factory.py  app_builder.py  app_factory.py  custom_api.py  multi_tenant.py  update_sqlalchemy_binds.py
app/core/before_first_request/: before_first_request.py
app/core/before_request/: before_request.py
app/core/choose_tenant/: choose_tenant.py
app/core/context_processor/: context_processor.py
app/core/cors/: flask_cors.py
app/core/create_admin_user/: create_admin_user.py
app/core/create_database/: create_database.py
app/core/create_tables_from_models/: create_tables_from_models.py
app/core/database/: database.py  initialize_database.py  multi_tenant.py  update_sqlalchemy_binds.py
app/core/errorhandler/: errorhandler.py
app/core/flask_admin/: init_flask_admin.py
app/core/flask_security/: init_flask_security.py
app/core/health_check/: rest_api.py  view.py
app/core/limiter/: flask_limiter.py
app/core/requires/: requires.py
app/core/talisman/: flask_talisman.py
app/extensions/: get_enabled_extensions.py  register_extensions.py  sql_alch_model_extension.py
app/extensions/auth/: view.py
app/extensions/storage/: view.py
app/models/data/: base_model.py  database.py  extension.py  plugin.py  role.py  user.py  versioned_base.py
app/models/views/: base_model_view.py  dynamic_template_view.py
app/plugins/: get_enabled_plugins.py  register_plugins.py  sql_alch_model_plugin.py
app/services/data/: i_data_service.py  i_data_service_factory.py
app/services/data_validation/: i_data_validator.py
app/services/data_validation/pandas/: pandas_data_validator.py
app/services/util/: convert_and_format_to_datetime.py  make_serializable.py  parse_yes_no_true.py
configuration/: .env.development  .env.production  .env.shared  .env.test  config.py  database_config.py  enabled_extensions.json  extensions_config.json
requirements/: common.txt  dev.txt  prod.txt
