[tool.poetry]
name = "FlaskPocketBase"
version = "0.1.0"
description = "Try to implement the features of PocketBase using flask"
authors = ["Ryan Julyan <ryan@julyan.biz>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.2.0"
Flask-SQLAlchemy = "^3.0.3"
urllib3 = "^1.26.12"
Flask-Cors = "^3.0.10"
Flask-DebugToolbar = "^0.13.1"
Flask-WTF = "^1.1.1"
python-dotenv = "^1.0.0"
SQLAlchemy-Utils = "^0.41.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
